--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FE 126</title>
+  <title>Exam Dima Karpovich</title>
   <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./scss/main.scss">
 </head>
+
 <body>
+  <main class="container">
+    <h1 class="title">Exam</h1>
+
+    <section class="slider">
+      <h2 class="title">Slider</h2>
+      <div class="slider__item">
+        <div class="slider__block">
+          <h2 class="slider__title">Меню 'Премиум'</h2>
+          <p class="slider__descr">Качественное исполнение блюд. Красная рыба, морепродукты, фрукты.</p>
+        </div>
+        <img src="image/slider/elite.jpg" alt="elite">
+      </div>
+      <div class="slider__item">
+        <div class="slider__block">
+          <h2 class="slider__title">Меню 'Бургеры'</h2>
+          <p class="slider__descr">Бургер – хороший способ быстро перекусить и продолжить заниматься своими делами</p>
+        </div>
+        <img src="image/slider/hamburger.jpg" alt="hamburger">
+      </div>
+      <div class="slider__item">
+        <div class="slider__block">
+          <h2 class="slider__title">Меню 'Постное'</h2>
+          <p class="slider__descr">Тщательный подбор ингредиентов: полное отсутствие продуктов животного происхождения.
+          </p>
+        </div>
+        <img src="image/slider/post.jpg" alt="post">
+      </div>
+      <div class="slider__item">
+        <div class="slider__block">
+          <h2 class="slider__title">Меню 'Сбалансированое'</h2>
+          <p class="slider__descr">Cooтветствие вашего рациона всем научным рекомендациям.</p>
+        </div>
+        <img src="image/slider/vegy.jpg" alt="vegy">
+      </div>
+      <button class="button button__next button__next_bg">
+        <img src="image/free-icon-next-arrow-21122.svg" alt="next">
+      </button>
+      <button class="button button__prev button__prev_bg">
+        <img class="button__img" src="image/free-icon-next-arrow-21122.svg " alt="prev">
+      </button>
+    </section>
+
+
+
+
+
+    <section class="carusel">
+      <h2 class="title">Carusel</h2>
+      <div class="carusel__wrapper">
+        <ul class="list">
+          <li class="list__item"><img src="image/carusel/природа-001-1.jpg" alt="" class="list__img"></li>
+          <li class="list__item"><img src="image/carusel/природа-02.jpg" alt="" class="list__img"></li>
+          <li class="list__item"><img src="image/carusel/природа-03.jpg" alt="" class="list__img"></li>
+          <li class="list__item"><img src="image/carusel/природа-04.jpg" alt="" class="list__img"></li>
+          <li class="list__item"><img src="image/carusel/природа-05.jpg" alt="" class="list__img"></li>
+          <li class="list__item"><img src="image/carusel/природа-06.jpg" alt="" class="list__img"></li>
+          <li class="list__item"><img src="image/carusel/природа-07.jpg" alt="" class="list__img"></li>
+          <li class="list__item"><img src="image/carusel/природа-08.jpg" alt="" class="list__img"></li>
+          <li class="list__item"><img src="image/carusel/природа-09.jpg" alt="" class="list__img"></li>
+          <li class="list__item"><img src="image/carusel/природа-10.jpg" alt="" class="list__img"></li>
+          <li class="list__item"><img src="image/carusel/природа-11.jpg" alt="" class="list__img"></li>
+          <li class="list__item"><img src="image/carusel/природа-12.jpg" alt="" class="list__img"></li>
+        </ul>
+        <button class=" button button__next button__next_cr ">
+          <img src="image/icons8-вперед-94.png" alt="next">
+        </button>
+        <button class="button button__prev button__prev_cr">
+          <img class="carusel__img" src="image/icons8-назад-94.png " alt="prev">
+        </button>
+      </div>
+    </section>
+
+
+    <section class="popup">
+      <h2 class="title">Popup</h2>
+      <div class="wrapper">
+        <div class="wrapper__img"><img  class="popup__img" src="image/popup-up/img-1.jpeg" alt="img" ><a class="wrapper__link" href="image/popup-up/img-1.jpeg">img-1</a></div>
+        <div class="wrapper__img"><img class="popup__img" src="image/popup-up/img-2.jpeg" alt="img" ><a class="wrapper__link" href="image/popup-up/img-2.jpeg">img-2</a></div>
+        <div class="wrapper__img"><img class="popup__img" src="image/popup-up/img-3.jpeg" alt="img" ><a class="wrapper__link" href="image/popup-up/img-3.jpeg">img-3</a></div>
+        <div class="wrapper__img"><img class="popup__img" src="image/popup-up/img-4.jpeg" alt="img" ><a class="wrapper__link" href="image/popup-up/img-4.jpeg">img-4</a></div>
+        <div class="wrapper__img"><img class="popup__img" src="image/popup-up/img-5.jpeg" alt="img"><a class="wrapper__link" href="image/popup-up/img-5.jpeg">img-5</a></div>
+        <div class="wrapper__img"><img class="popup__img" src="image/popup-up/img-6.jpeg" alt="img" ><a class="wrapper__link" href="image/popup-up/img-6.jpeg">img-6</a></div>
+        <div class="wrapper__img"><img class="popup__img" src="image/popup-up/img-7.jpeg" alt="img" ><a class="wrapper__link" href="image/popup-up/img-7.jpeg">img-7</a></div>
+        <div class="wrapper__img"><img class="popup__img" src="image/popup-up/img-8.jpeg" alt="img" ><a  class="wrapper__link" href="image/popup-up/img-8.jpeg">img-8</a></div>
+      </div>
+      <div class="window">
+        <span class="window__close">&times;</span>
+        <img class="window__img"  alt="img">
+      </div>
+    </section>
+
+    <section class="api">
+      <h2 class="title">Word search</h2>
+      <form id="form" action="" method="get" >
+        <input placeholder="Search..." id="search"  type="search">
+      </form>
+      <div class="api__wrapper">
+        <h3 class="api__name"></h3>
+        <p class="api__text"></p>
+        <p class="api__partOfSpeech"></p>
+        <p class="api__definition"></p>
+        <audio class="api__audio" controls ></audio>
+      </div>
+    </section>
+  </main>
   <script type="module" src="./js/app.js"></script>
 </body>
+
 </html>
